made bg height 100vh

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2185,6 +2185,7 @@ input, select, textarea {
 		text-align: center;
 		padding: 7.5em 0 2em 0;
 		cursor: default;
+		height: 100vh;
 	}
 
 		#header:before {
