--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2180,7 +2180,7 @@ input, select, textarea {
 		background-image: url(https://media.giphy.com/media/RLWLTNvEpeEh66dLur/giphy.gif);
 		background-size: cover;
 		background-position: center center;
-		background-attachment: fixed;
+		background-attachment: scroll;
 		color: #fff;
 		text-align: center;
 		padding: 7.5em 0 2em 0;
