--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2175,7 +2175,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		position: relative;
+		/* position: relative; */
 		/* background-image: url("../../images/header1.png"); */
 		background-image: url(https://media.giphy.com/media/RLWLTNvEpeEh66dLur/giphy.gif);
 		background-size: cover;
