--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2250,7 +2250,7 @@ input, select, textarea {
 
 	body.homepage #header {
 		height: 100vh;
-		min-height: 40em;
+		min-height: 100vh;
 	}
 
 		body.homepage #header h1 {
